altered Ernst affiliation

--- a/suppMat.tex
+++ b/suppMat.tex
@@ -139,7 +139,7 @@
 
 \title{\Large
 \textbf{Supplemental Material}\\[1em]
-\textsc{Rules and self-organising properties of post-embryonic plant organ morphogenesis}}
+\textsc{Rules and self-organizing properties of post-embryonic plant organ morphogenesis}}
 \author[1,5]{Daniel von Wangenheim}
 \author[2,3]{Jens Fangerau\thanks{Contributed equally.}}
 \author[1]{Alexander Schmitz\samethanks}
@@ -147,7 +147,7 @@
 \author[3]{Heike Leitte}
 \author[1]{Ernst H. K. Stelzer\thanks{Corresponding authors. E-mail: \href{alexis.maizel@cos.uni-heidelberg.de}{alexis.maizel@cos.uni-heidelberg.de} and (A.M.) \href{ernst.stelzer@physikalischebiologie.de}{ernst.stelzer@physikalischebiologie.de} (E.H.K.S).}}
 \author[2]{Alexis Maizel\samethanks}
-\affil[1]{Buchmann Institute for Molecular Life Sciences, Goethe University Frankfurt, D-60438 Frankfurt Am Main, Germany.}
+\affil[1]{Buchmann Institute for Molecular Life Sciences, Goethe Universität Frankfurt, D-60438 Frankfurt Am Main, Germany.}
 \affil[2]{Centre for Organismal Studies, Heidelberg University, D-69120 Heidelberg, Germany.}
 \affil[3]{Interdisciplinary Center for Scientific Computing, Heidelberg University, D-69120 Heidelberg, Germany.}
 \affil[4]{Department of Comparative Development and Genetics, Max Planck Institute of Plant Breeding Research, D-50829 Cologne, Germany.}
